GraphQL cnnected to PostgreSQL. Apollo engine in env file

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
-    <title>bricktown</title>
+    <title>Bricktown</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but bricktown doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Bricktown doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmOA1q4i51n3XYPKHMMtqSur_44eJXHU4" async defer></script>
   </body>
 </html>
